# IOLinke-rs

./: .gitignore  Cargo.toml  PROJECT_STATUS.adoc  PROJECT_STATUS.md  README.md  build.rs  cbindgen.toml  prompt.md
.cargo/: config.toml
.github/: copilot-instructions.md
IOLinke-Bindings/: Cargo.toml  build.rs  cbindgen.toml
IOLinke-Bindings/examples/c/: CMakeLists.txt  main.c
IOLinke-Bindings/src/: ffi.rs
IOLinke-Bindings/src/c/: app.rs  hooks.rs  mod.rs  phy.rs  types.rs
IOLinke-DEVICE/: Cargo.toml  README.md  build.rs
IOLinke-DEVICE/src/: lib.rs  system_management.rs
IOLinke-DEVICE/src/al/: data_storage.rs  event_handler.rs  mod.rs  od_handler.rs  parameter_manager.rs  pd_handler.rs  services.rs
IOLinke-DEVICE/src/dl/: command_handler.rs  event_handler.rs  isdu_handler.rs  message_handler.rs  mod.rs  mode_handler.rs  od_handler.rs  pd_handler.rs
IOLinke-DEVICE/src/pl/: hal.rs  mod.rs  physical_layer.rs
IOLinke-DEVICE/src/storage/: event_memory.rs  mod.rs
IOLinke-Derived-config/: Cargo.toml
IOLinke-Derived-config/src/: lib.rs
IOLinke-Derived-config/src/device/: m_seq_capability.rs  mod.rs  on_req_data.rs  process_data.rs  timings.rs  vendor_specifics.rs
IOLinke-Dev-config/: Cargo.toml  device_config.toon
IOLinke-Dev-config/src/: lib.rs
IOLinke-Dev-config/src/device/: mod.rs  on_req_data.rs  process_data.rs  timings.rs  vendor_specifics.rs
IOLinke-Examples/: Cargo.toml
IOLinke-Examples/examples/: basic.rs
IOLinke-Examples/examples/c/: basic_c_example.c
IOLinke-Examples/examples/c/STM32/IO-Linke-STM/: .mxproject  CMakeLists.txt  CMakePresets.json  IO-Linke-STM.ioc  build.ninja
IOLinke-Examples/examples/c/STM32/IO-Linke-STM/Core/Src/: iolinke_device.c  main.c  stm32f3xx_hal_msp.c
IOLinke-Examples/examples/c/STM32/IO-Linke-STM/cmake/stm32cubemx/: CMakeLists.txt
IOLinke-Test-utils/: Cargo.toml  README.md
IOLinke-Test-utils/src/: frame_utils.rs  lib.rs  mock_app_layer.rs  mock_physical_layer.rs  page_params.rs  test_environment.rs  test_sequences.rs  types.rs
IOLinke-Test-utils/tests/: README.md  isdu_tests.rs  mod.rs  preop_tests.rs  startup_tests.rs
IOLinke-Tools/IODD-Builder/: .gitignore  bun.lockb  package-lock.json  package.json  playwright.config.ts  prompt.md  tailwind.config.cjs
IOLinke-Tools/IODD-Builder/data/: iodd_form_schema.json  sample_device.xml  sample_state.json
IOLinke-Tools/IODD-Builder/src/: app.css
IOLinke-Tools/IODD-Builder/src-tauri/: Cargo.toml  tauri.conf.json
IOLinke-Tools/IODD-Builder/src-tauri/src/: main.rs
IOLinke-Tools/IODD-Builder/src/components/: ActivityBar.svelte  EditorTabs.svelte  EntityForm.svelte  HierarchyTree.svelte  HierarchyTreeNode.svelte  InspectorPanel.svelte  Toolbar.svelte  ValidationPanel.svelte  XMLPreview.svelte
IOLinke-Tools/IODD-Builder/src/lib/models/: generated.ts
IOLinke-Tools/IODD-Builder/src/lib/schema/: loader.ts  types.ts
IOLinke-Tools/IODD-Builder/src/lib/stores/: documents.ts  hierarchy.ts  ui.ts  validation.ts
IOLinke-Tools/IODD-Builder/src/lib/utils/: csv.ts  form.ts  persistence.ts  statePath.ts  xml.ts
IOLinke-Tools/IODD-Builder/src/lib/validators/: rules.ts
IOLinke-Tools/IODD-Builder/src/routes/: +page.svelte
IOLinke-Tools/IODD-Builder/src/types/: tauri-plugin-fs.d.ts
IOLinke-Tools/IODD-Builder/tests/e2e/: datatype-variable.spec.ts  device-variant.spec.ts  menu-user-interface.spec.ts  parameter-navigation.spec.ts  product-references.spec.ts  transport-layers.spec.ts
IOLinke-macros/: Cargo.toml  README.md
IOLinke-macros/examples/: test_macros.rs  test_parameter_storage.rs
IOLinke-macros/src/: lib.rs
IOLinke-types/: Cargo.toml
IOLinke-types/src/: custom.rs  lib.rs
IOLinke-types/src/frame/: isdu.rs  mod.rs  msequence.rs
IOLinke-types/src/handlers/: command.rs  ds.rs  event.rs  isdu.rs  message.rs  mod.rs  mode.rs  od.rs  pd.rs  pl.rs  pm.rs  sm.rs
IOLinke-types/src/page/: mod.rs  page1.rs  page2.rs
IOLinke-util/: Cargo.toml
IOLinke-util/src/: event.rs  lib.rs  log_utils.rs
IOLinke-util/src/frame_fromat/: mod.rs
IOLinke-util/src/frame_fromat/isdu/: isdu.rs  mod.rs
IOLinke-util/src/frame_fromat/message/: message.rs  mod.rs
examples/: basic.rs  basic_device.rs  import_test.rs  minimal.rs  step_by_step.rs
examples/c/: basic_c_example.c
src/: application.rs  command.rs  data_storage.rs  dl_mode.rs  event.rs  event_handler.rs  ffi.rs  hal.rs  lib.rs  message.rs  on_request.rs  parameter.rs  sm.rs  storage.rs  system_management.rs  test_utils.rs  types.rs
src/al/: application.rs  data_storage.rs  event_handler.rs  event_sm.rs  mod.rs  od_handler.rs  on_request.rs  parameter_manager.rs  pd_handler.rs  services.rs
src/config/: m_seq_capability.rs  mod.rs  on_req_data.rs  process_data.rs  timings.rs  vendor_specifics.rs
src/dl/: command.rs  command_handler.rs  dl_mode.rs  event_handler.rs  isdu.rs  isdu_handler.rs  message.rs  message_handler.rs  mod.rs  mode_handler.rs  od_handler.rs  on_request.rs  pd_handler.rs  process_data.rs
src/pl/: hal.rs  mod.rs  physical_layer.rs
src/storage/: direct_parameters.rs  event_memory.rs  mod.rs  parameters_memory.rs
src/test_utils/: frame_utils.rs  mock_physical_layer.rs  mod.rs  page_params.rs  test_environment.rs  test_sequences.rs  types.rs
src/utils/: bitwise.rs  event.rs  log_utils.rs  mod.rs
src/utils/event_type/: mod.rs
src/utils/frame_fromat/: mod.rs
src/utils/frame_fromat/com_timing/: mod.rs
src/utils/frame_fromat/isdu/: isdu.rs  macros.rs  mod.rs
src/utils/frame_fromat/message/: macros.rs  message.rs  mod.rs
src/utils/page_params/: mod.rs  page1.rs
tasks/configuration/: Cargo.toml
tasks/configuration/src/: config_file.rs  config_struct.rs  main.rs  utils.rs  write_config.rs
tests/: README.md  isdu_tests.rs  mod.rs  preop_tests.rs  startup_tests.rs
