[package]
name = "iolinke-device"
version = "0.1.0"
edition = "2021"
authors = ["IO-Link Device Stack Contributors"]
description = "IO-Link Device stack implementation compliant with IO-Link Specification v1.1.4"
license = "GPL-3"
repository = "https://github.com/Raghava-Ch/IOLinke-Device"
readme = "README.md"
keywords = ["iolink", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]

[dependencies]
# Workspace dependencies
heapless = { workspace = true }
embedded-hal = { workspace = true }
nom = { workspace = true }
nb = { workspace = true }

# Project-specific dependencies
iolinke-macros = { path = "../IOLinke-macros" }
smlang = "0.8"
cstr_core = "0.2"
log = "0.4"

[dependencies.cortex-m]
workspace = true
optional = true

[dependencies.panic-halt]
workspace = true
optional = true

[features]
default = []
std = []
cortex-m = ["dep:cortex-m"]
panic-halt = ["dep:panic-halt"]

[build-dependencies]
# cbindgen = "0.27"

[[example]]
name = "basic_device"
required-features = ["panic-halt"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
