[package]
name = "iolinke-device"
version = "0.1.0"
edition = "2024"
authors = ["Raghava Ch"]
description = "IO-Link Device stack implementation compliant with IO-Link Specification v1.1.4"
license = "GPL-3"
repository = "https://github.com/Raghava-Ch/IOLinke-Device"
readme = "README.md"
keywords = ["iolink", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]

[dependencies]
# Workspace dependencies
heapless = { version = "0.8", default-features = false }
# embedded-hal = "1.0"
# panic-halt = { version = "1.0.0" }
# cortex-m = { version = "0.7" }

# Project-specific dependencies
iolinke-macros = { path = "../IOLinke-macros" }
cstr_core = "0.2"
log = "0.4"
bitfields = "1.0.0"

[features]
default = ["std", "log"]
std = []
log = []
# clang = []
# rustlang = []
# cortex-m = []
# panic-halt = []
# block_parameterization = []

[build-dependencies]
# cbindgen = "0.27"

[dev-dependencies]
lazy_static = "1.4"

[[example]]
name = "basic"
# required-features = ["default", "std"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

