[workspace]
members = [
    "IOLinke-DEVICE",
    "IOLinke-macros",
    "IOLinke-types",
    "IOLinke-util",
    "IOLinke-Test-utils",
    "IOLinke-Derived-config",
    "IOLinke-Dev-config",
    "IOLinke-Examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Raghava Ch"]
license = "GPL-3"
repository = "https://github.com/Raghava-Ch/IOLinke-Device"
readme = "README.md"
keywords = ["iolink", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]
description = "Complete IO-Link Master and Device Stack implementation in Rust, Compliant with IO-Link Specification v1.1.4"

[workspace.dependencies]
# Shared dependencies across workspace
iolinke-device = { path = "IOLinke-DEVICE" }
iolinke-types = { path = "IOLinke-types" }
iolinke-macros = { path = "IOLinke-macros" }
iolinke-dev-config = { path = "IOLinke-Dev-config" }
iolinke-derived-config = { path = "IOLinke-Derived-config" }
iolinke-util = { path = "IOLinke-util" }
iolinke-test-utils = { path = "IOLinke-Test-utils" }

heapless = { version = "0.8.0" }
bitfields = { version = "1.0.0" }

# Macro dependencies
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }

[workspace.metadata]
description = "Complete IO-Link Device Stack implementation in Rust"
