[package]
name = "iolinke-derived-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
iolinke-dev-config = { workspace = true }
iolinke-types = { workspace = true }
iolinke-macros = { workspace = true }

#heapless is used for parameter storage macro
heapless = { workspace = true }