[package]
name = "IOLinke-Examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "IO-Link Examples applications"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
iolinke-device = { path = "../IOLinke-DEVICE" }