[package]
name = "iolinke-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "IOLinke Examples applications"

[features]
default = []
std = []

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
iolinke-device = { path = "../IOLinke-DEVICE" }