[package]
name = "iolinke-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[lib]

[dependencies]
iolinke-device = { workspace = true, default-features = false, features = ["std"]}
iolinke-util = { workspace = true, default-features = false, features = ["std"] }
iolinke-types = { workspace = true, default-features = false, features = ["std"] }
iolinke-derived-config = { workspace = true, default-features = false, features = ["std"] }
iolinke-dev-config = { workspace = true, default-features = false, features = ["std"] }

heapless = { workspace = true }
bitfields = { workspace = true }

[features]
default = ["std"]
std = []