[package]
name = "iolinke-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for IO-Link Device Stack implementation"
license = "GPL-3"
keywords = ["iolink", "embedded", "macros", "no-std"]
categories = ["embedded", "no-std"]
repository = "https://github.com/Raghava-Ch/IOLinke-Device"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
heapless = { workspace = true }