[package]
name = "iolinke-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[lib]

[dependencies]
iolinke-macros = { workspace = true }
iolinke-dev-config = { workspace = true }

heapless = { workspace = true }
bitfields = { workspace = true }