[package]
name = "iolinke-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[lib]

[dependencies]
iolinke-types = { workspace = true }
iolinke-derived-config = { workspace = true }

heapless = { workspace = true }
bitfields = { workspace = true }

[features]
default = ["std", "log"]
std = []
log = []