[package]
name = "configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_spanned = { workspace = true }
serde_json = { workspace = true }
toon-rust = { workspace = true }
